# Volleyball-Group-Activity-Recognition

./: .gitignore
Basline-1/: pyproject.toml
Basline-1/src/basline_1/: __init__.py
